fixed some styling and order for readability

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -67,11 +67,12 @@
 
 .back-button{
   font-size: 40px;
+  margin-top: 6px;
 }
 
 .archive-button {
   font-size: 18px;
-  opacity: 0.5;
+
 }
 
 .form-control-file{
